# todo-project

./: .gitignore  README.md  docker-compose.yml
auth-ms/: .env  Cargo.toml  Dockerfile
auth-ms/migrations/: 20250822122412_set_up_database.sql  init.sql
auth-ms/src/: main.rs
fronted/: index.html  package-lock.json  vite.config.ts
frontend/: Dockerfile  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/components/: Header.tsx  Pagination.tsx  ProjectManager.tsx  ProtectedRoute.tsx  TaskCalendar.tsx  TaskCard.tsx  TaskFilters.tsx  TaskForm.tsx  TaskList.tsx  TaskStats.tsx
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/dashboard/: Dashboard.tsx
frontend/src/contexts/: AuthContext.tsx  TaskContext.tsx
frontend/src/hooks/: useDateValidation.ts  useFormValidation.ts  usePagination.ts
frontend/src/lib/: config.ts  types.ts
frontend/src/lib/api/: auth.ts  index.ts  projects.ts  (+2 more)
main-ms/: .env  Cargo.toml  Dockerfile  docker-compose.yml
main-ms/migrations/: 20250822154328_other_db.sql  init.sql
main-ms/src/: db.rs  main.rs
main-ms/src/routes/: login.rs  me.rs  mod.rs  register.rs
main-ms/src/routes/projects/: delete.rs  get.rs  mod.rs  post.rs  put.rs
main-ms/src/routes/tags/: delete.rs  get.rs  mod.rs  post.rs  put.rs
main-ms/src/routes/task_tags/: delete.rs  get.rs  get_multiple.rs  mod.rs  post.rs
main-ms/src/routes/tasks/: delete.rs  get.rs  mod.rs  post.rs  put.rs
main-ms/src/utils/: extract_token.rs  mod.rs  token.rs
