[package]
name = "auth-ms"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["cors"] }
bcrypt = "0.15.0"
thiserror = "1.0.69"
base64 = "0.22.1"
log = "0.4.27"
